<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <item
        android:id="@+id/clear"
        android:layout_gravity="center"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/color_options"
        android:gravity="center"
        android:orderInCategory="100"
        android:title="@string/color_settings"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/size_options"
        android:orderInCategory="100"
        android:title="@string/size_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_options"
        android:icon="@android:drawable/arrow_down_float"
        android:orderInCategory="100"
        android:title="@string/save"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/load_options"
        android:icon="@android:drawable/arrow_up_float"
        android:orderInCategory="100"
        android:title="@string/load"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_options"
        android:title="@string/delete" />
    <item
        android:id="@+id/export_options"
        android:orderInCategory="100"
        android:title="@string/export"
        app:showAsAction="never" />
</menu>